<resources>
    <!--Application name-->
    <string name="app_name">FoodApp</string>

    <!--Activities names-->
    <string name="deconnection">Déconnexion </string>
    <string name="title_activity_main">Main </string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_enter">Click</string>

    <!--Main navigation-->
    <string name="nav_header_description_icon">Navigation icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>

    <string name="add_recipe">Ajouter une recette</string>
    <string name="add_ingredient">Ajouter un ingrédient</string>
    <string name="add_stape">Ajouter une étape</string>

    <string name="salty">Salé</string>
    <string name="sweet">Sucré</string>
    <string name="my_recipes">Mes recettes</string>

    <string name="save_recipe">Enregistrer ma recette</string>
    <string name="add_photo">Ajouter une photo</string>

</resources>